[tool.poetry]
name = "ml-engineering"
version = "0.1.0"
description = ""
authors = ["Dipak Tandel <dipak.tandel96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
vllm = "^0.6.3.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
